<resources>
    <string name="app_name">Dual</string>

    <!-- Page d'accueil -->
    <string name="home_page_title">Dual</string>
    <string name="home_launch_session_button">Lancer une séance</string>
    <string name="home_greeting">Bonjour </string>

    <!-- Page de connexion -->
    <string name="connexion_page_title">Connexion</string>
    <string name="connexion_page_email_input">Adresse email :</string>
    <string name="connexion_page_password_input">Mot de passe :</string>
    <string name="connexion_page_forgottenpassword">Mot de passe oublié ?</string>
    <string name="connexion_page_remember_me_button">Se souvenir de moi</string>
    <string name="connexion_page_button">Se connecter</string>
    <string name="connexion_page_sinscrire_button">Pas de compte ? S\'inscrire</string>

    <!-- Page d/'inscription' -->
    <string name="creation_page_title">Inscription</string>
    <string name="inscription_page_nom_input">Nom :</string>
    <string name="inscription_page_prenom_input">Prenom :</string>
    <string name="inscription_page_email_input">Adresse email :</string>
    <string name="inscription_page_password_input">Mot de passe :</string>
    <string name="inscription_page_passwordVerif_input">Vérification du mot de passe :</string>
    <string name="inscription_page_button">S\'inscrire</string>
    <string name="inscription_page_seconnecter_button">Déjà un compte ? Se connecter</string>

    <!-- Navigation -->
    <string name="home">Home</string>
    <string name="classes">Classes</string>

    <!-- Page de profil -->
    <string name="profil_de">Profil de</string>
    <string name="enseignant_d_eps">Enseignant d\'EPS</string>
    <string name="lancer_une_s_ance">Lancer une séance</string>
    <string name="empty">Empty</string>
    <string name="changer_mdp">Changer votre mot de passe</string>
    <string name="deconnexion">Se Déconnecter"</string>
    <string name="prenom">Prénom :</string>
    <string name="nom">Nom :</string>
    <string name="email">Email :</string>
    <string name="mot_de_passe">Mot de passe actuel :</string>
    <string name="nouveau_mot_de_passe">Nouveau mot de passe :</string>
    <string name="confirmer_nouveau_mot_de_passe">Confirmer le nouveau mot de passe :</string>

    <string name="forgottenpassword_page_title">Mot de passe oublié ?</string>
    <string name="forgottenpassword_page_explication">Veuillez saisir l\'adresse email associée à votre compte pour recevoir le code de réinitialisation de votre mot de passe.</string>
    <string name="forgottenpassword_page_email_input">Adresse email :</string>
    <string name="forgottenpassword_page_button">Recevoir le code</string>
    <string name="forgottenpassword_page_seconnecter_button">Déjà un compte ? Se connecter</string>
    <string name="retour_la_page_precedente">Retour à la page précédente</string>
    <string name="tirs">Tirs</string>
    <string name="course">Course</string>
    <string name="examen">Examen</string>
    <string name="espace_professeur">🎓 Espace Professeur</string>

</resources>
