<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:id="@+id/FondBleu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/fond_bleu_connexion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,MissingConstraints"
        android:contentDescription="Le fond bleu de la page de connexion"/>

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/helvetica_light"
        android:text="@string/forgottenpassword_page_title"
        android:textSize="40sp"
        android:textColor="@color/blanc"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/explication"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:text="@string/forgottenpassword_page_explication"
        android:fontFamily="@font/helvetica_light"
        android:textSize="20sp"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.42" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="480dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/helvetica_light"
        android:hint="@string/forgottenpassword_page_email_input"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="#8D8D8D"
        android:textSize="25sp"
        android:textStyle="normal"
        android:background="@null"
        app:layout_constraintTop_toBottomOf="@id/explication"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp" />

    <View
        android:id="@+id/Trait"
        android:layout_width="500dp"
        android:layout_height="2dp"
        android:background="#D9D9D9"
        app:layout_constraintTop_toBottomOf="@id/Email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/lienButton"
        android:layout_width="400dp"
        android:layout_height="45dp"
        android:text="@string/forgottenpassword_page_button"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/helvetica"
        android:background="@drawable/btn_connexion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Trait"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/inscriptionLien"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgottenpassword_page_seconnecter_button"
        android:textSize="16sp"
        android:textColor="@color/bleu"
        android:fontFamily="@font/helvetica_light"
        android:textStyle="normal"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/lienButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
