<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/top_bar_background_with_border"
    android:paddingTop="@dimen/default_margin"

    android:paddingStart="@dimen/default_margin"
    android:paddingEnd="@dimen/default_margin"
    android:clipToPadding="false">

    <LinearLayout
        android:id="@+id/greeting_container"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_greeting"
                android:textSize="32sp" />

            <View
                android:layout_width="8dp"
                android:layout_height="0dp" />

            <TextView
                android:id="@+id/prenomLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:textSize="32sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/espace_professeur"
            android:textColor="@color/noir"
            android:textSize="14sp"
            android:textStyle="bold"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:background="#1A1456DB" />
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/profileImageContainer"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="0dp"
        app:strokeColor="@color/bleu"
        app:strokeWidth="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/profileImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerCrop"
            android:src="@drawable/pfp" />

    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/fox_embrace"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/ic_fox_embrace"
        android:clickable="false"
        android:focusable="false"
        android:translationX="20dp"
        android:translationY="-23dp"
        app:layout_constraintBottom_toBottomOf="@+id/profileImageContainer"
        app:layout_constraintEnd_toEndOf="@+id/profileImageContainer"
        app:layout_constraintStart_toStartOf="@+id/profileImageContainer"
        app:layout_constraintTop_toTopOf="@+id/profileImageContainer" />
</androidx.constraintlayout.widget.ConstraintLayout>